--- a/app/src/main/res/layout/ribbon_of_emails_item.xml
+++ b/app/src/main/res/layout/ribbon_of_emails_item.xml
@@ -29,23 +29,23 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/email_header_text_view"
+            android:id="@+id/email_subject_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/user_text_view"
             android:layout_marginStart="@dimen/text_margin_start"
             android:layout_toEndOf="@id/user_image_view"
             android:singleLine="true"
-            android:text="@string/email_header"
+            android:text="@string/email_subject"
             android:textColor="@android:color/black"
             android:textSize="@dimen/email_header_ts"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/email_text_text_view"
+            android:id="@+id/email_compose_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/email_header_text_view"
+            android:layout_below="@id/email_subject_text_view"
             android:layout_marginStart="@dimen/text_margin_start"
             android:layout_toEndOf="@id/user_image_view"
             android:singleLine="true"
@@ -53,13 +53,13 @@
             android:textSize="@dimen/email_text_ts" />
 
         <TextView
-            android:id="@+id/email_time_passed_text_view"
+            android:id="@+id/email_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:singleLine="true"
-            android:text="@string/time_passed"
+            android:text="@string/email_date"
             android:textSize="@dimen/email_time_passed_ts" />
     </RelativeLayout>
 
