--- a/app/src/main/res/layout/activity_create_message.xml
+++ b/app/src/main/res/layout/activity_create_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,48 +10,48 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="@dimen/edit_text_padding"
+        android:background="@null"
         android:hint="@string/email_to"
         android:inputType="textEmailAddress"
-        android:background="@null"  />
+        android:padding="@dimen/edit_text_padding" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/border_bottom_height"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="@dimen/edit_text_padding"
+        android:background="@null"
         android:hint="@string/email_subject"
         android:inputType="textEmailSubject"
-        android:background="@null"  />
+        android:padding="@dimen/edit_text_padding" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/border_bottom_height"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        android:padding="@dimen/edit_text_padding"
+        android:background="@null"
+        android:gravity="top"
         android:hint="@string/email_to"
         android:inputType="text"
-        android:gravity="top"
-        android:background="@null"  />
+        android:padding="@dimen/edit_text_padding" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/border_bottom_height"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_business_signature"/>
+        android:text="@string/add_business_signature" />
 
 </LinearLayout>
