--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="user_name_detail_text_color">#464646</color>
+    <color name="detail_default_text_color">#9D9D9D</color>
+    <color name="detail_button_default_color">#6B00E4</color>
 </resources>
