--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="edit_text_padding">16dp</dimen>
     <dimen name="border_bottom_height">1dp</dimen>
+    <dimen name="user_image_margin">16dp</dimen>
+    <dimen name="detail_default_margin_tv">16dp</dimen>
+    <dimen name="user_name_detail_text_size">20sp</dimen>
+    <dimen name="detail_default_text_size">14sp</dimen>
 </resources>
